force-app/main/default/objects/Term__c/fields/Aid_Year__c.field-meta.xml
<CustomField>
    <fullName>Aid_Year__c</fullName>
    <description>[Peoplesoft] - Financial Aid Year associated with academic term</description>
    <inlineHelpText>Financial Aid Year associated with academic term</inlineHelpText>
    <label>Aid Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>