force-app/main/default/objects/Term__c/fields/PeopleSoft_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>[Peoplesoft] - Peoplesoft code</description>
    <externalId>true</externalId>
    <label>PeopleSoft Code</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>