force-app/main/default/objects/Term__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <description>[Peoplesoft] - Examples include: Spring, Summer, Fall</description>
    <label>Semester</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Winter Intercession</fullName>
            </value>
            <value>
                <fullName>Summer 1</fullName>
            </value>
            <value>
                <fullName>Summer 2</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Winter Interesession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>