force-app/main/default/objects/Term__c/fields/Session_A_C_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_A_C_Close_Date__c</fullName>
    <description>[Peoplesoft] - 21st Day of the Session</description>
    <label>Session A/C Close Date</label>
    <type>Date</type>
</CustomField>