force-app/main/default/objects/Term__c/fields/Session_A_C_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_A_C_Start_Date__c</fullName>
    <description>[Peoplesoft] - Day classes begin</description>
    <label>Session A/C Start Date</label>
    <type>Date</type>
</CustomField>