force-app/main/default/objects/Term__c/fields/Session_B_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_B_Close_Date__c</fullName>
    <description>[Peoplesoft] - 21st Day for Session B</description>
    <label>Session B Close Date</label>
    <type>Date</type>
</CustomField>