force-app/main/default/objects/Term__c/fields/Session_B_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_B_Start_Date__c</fullName>
    <description>[Peoplesoft] - Day classes begin for Session B</description>
    <label>Session B Start Date</label>
    <type>Date</type>
</CustomField>