force-app/main/default/objects/Term__c/fields/Term_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Begin_Date__c</fullName>
    <description>[PeopleSoft] - Date term begins, from PS_TERM_TBL, populated by mule api crm-academic-terms</description>
    <inlineHelpText>[PeopleSoft] - Date term begins, from PS_TERM_TBL, populated by mule api crm-academic-terms</inlineHelpText>
    <label>Term Begin Date</label>
    <type>Date</type>
</CustomField>