force-app/main/default/objects/Term__c/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <description>[PeopleSoft] - Date term ends, from PS_TERM_TBL.TERM_END_DT.  Populated by mule API crm-academic-terms</description>
    <inlineHelpText>[PeopleSoft] - Date term ends, from PS_TERM_TBL.TERM_END_DT.  Populated by mule API crm-academic-terms</inlineHelpText>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>