force-app/main/default/objects/Term__c/fields/Term_Status__c.field-meta.xml
<CustomField>
    <fullName>Term_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Peoplesoft] - Checkbox for status of term</description>
    <label>Term Status</label>
    <type>Checkbox</type>
</CustomField>