force-app/main/default/objects/Term__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>[Peoplesoft] - Year</description>
    <label>Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>