force-app/main/default/objects/Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PeopleSoft_Code__c</columns>
    <columns>Session_A_C_Start_Date__c</columns>
    <columns>Session_A_C_Close_Date__c</columns>
    <columns>Session_B_Start_Date__c</columns>
    <columns>Session_B_Close_Date__c</columns>
    <columns>Semester__c</columns>
    <columns>Year__c</columns>
    <columns>Term_Begin_Date__c</columns>
    <columns>Term_End_Date__c</columns>
    <columns>Term_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>