force-app/main/default/objects/Term__c/listViews/Today_going_forwar.listView-meta.xml
<ListView>
    <fullName>Today_going_forwar</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>PeopleSoft_Code__c</columns>
    <columns>Semester__c</columns>
    <columns>Session_A_C_Close_Date__c</columns>
    <columns>Session_A_C_Start_Date__c</columns>
    <columns>Session_B_Close_Date__c</columns>
    <columns>Session_B_Start_Date__c</columns>
    <columns>Term_Status__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Session_A_C_Close_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Future Terms</label>
</ListView>