force-app/main/default/objects/Term__c/listViews/X2020_2022.listView-meta.xml
<ListView>
    <fullName>X2020_2022</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>PeopleSoft_Code__c</columns>
    <columns>Semester__c</columns>
    <columns>Session_A_C_Close_Date__c</columns>
    <columns>Session_A_C_Start_Date__c</columns>
    <columns>Session_B_Close_Date__c</columns>
    <columns>Session_B_Start_Date__c</columns>
    <columns>Term_Status__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>2020,2021,2022,2023,2024,2025</value>
    </filters>
    <label>2020-2025 Terms</label>
</ListView>